fixed overflow ish

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ df */
 
 html, body {
   height: 100%;
+   width: 100%;
 }
 
 a:link {
@@ -84,9 +85,9 @@ body {
   border-bottom: solid #ededed 1px;
   height: 110%;
   position: relative;
-  right: 0;
-  top: 0;
-  left: 0;
+  z-index : 1;
+
+
 }
 
 .navLink {
@@ -108,63 +109,35 @@ body {
 }
 
 .landingPage {
-  /* align-content: center; */
-  align-items: stretch;
-  /* color: #f6f6f6; */
+  overflow: hidden;
   color: white;
-  display: flex;
-
-  /* background: linear-gradient(#F7F7F7b5, #F7F7F7b5), url(components/media/lake-george.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover; */
-
-  /* justify-content: center; */
-  /* height: 500px; */
-  /* position: relative; */
-
-  /* min-height: 500px; */
   margin: 0em;
   width: 100%;
-  /* background: #fe8483; */
-  /* background: #7fd1da; */
-  background-repeat: repeat-x;
-  /* min-height: 450px;
-  max-height: 750px; */
+  /* height: 50%; */
+  justify-content: center;
   position: relative;
-  /* margin: 1.5em 0em; */
+  z-index: -2;
   flex-direction: column;
   background: #ffffffb5;
-  /* flex-grow: 1;
-  flex-shrink: 1; */
-  /* flex-basis: auto; */
-  /* overflow: hidden; */
 
 }
 
 
 .landingPageContent {
-  align-items: stretch;
-  /* align-content: center; */
+  /* align-items: stretch; */
   alignment: center;
-  text-align: center;
+  align-items: center;
   flex-direction: column;
   padding: 2.25em;
   margin: 0em;
   display: flex;
   wrap: nowrap;
-/* clip-path: polygon(0 0, 70% 1%, 30% 100%, 0% 100%); */
-
-  justify-content: center;
+  /* justify-content: center; */
   background: linear-gradient(to right, #ff5f6d, #fe8483);
-  transform: skewY(-6deg);
+  transform: skew(-60deg);
   text-rendering: optimizeLegibility;
-  height: 100%;
-  width: 100%;
 
-  /* flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto; */
+
 }
 
 .myName {
@@ -172,29 +145,30 @@ body {
   padding: 1em;
   font-size: 40px;
   font-weight: 500;
-  display: flex;
+  /* display: flex; */
   wrap: nowrap;
-  align-self: stretch;
-transform: skewY(6deg);
+  /* align-self: center;
+  align-content: center;
+  justify-content: center; */
+transform: skew(60deg);
 }
 
 .myHeadline {
   font-size: 24px;
+  align-items: center;
   margin: 1em;
-  padding: 1em 1em 5em 1em;
+  padding: 1em 1em 1em 1em;
   text-transform: uppercase;
   height: 100%;
-  display: flex;
+  /* display: flex; */
   color: white;
-  justify-content: flex-end;
-  transform: skewY(6deg);
-  /* align-self: stretch; */
-
+  justify-content: center;
+  transform: skew(60deg);
 }
 
 
 
-.portfolio .content {
+/* .portfolio .content {
   display:flex;
   flex-direction: column;
   height: 100%;
@@ -208,7 +182,14 @@ transform: skewY(6deg);
   justify-content: flex-start;
   /* width: 40%; */
   /* justify-content: flex-start;
-  margin: 1em; */
+  margin: 1em;
+} */
+
+.portfolio: {
+  height: 100%;
+  width: 100%;
+  padding: 1em;
+  margin: 1em;
 }
 
 .screenshotOpp {
@@ -351,6 +332,10 @@ img.proj-screenshots {
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .post {
@@ -412,11 +397,13 @@ section.footer {
   padding: 1em;
   height: 80px;
   margin: -1em;
+  z-index: 0;
   /* background-color: #e1e0d8; */
   /* background: #ededed; */
   background-color: #f7f7f7;
   width: 100%;
   text-align: center;
+  vertical-align: baseline;
 }
 
 .footer-content {
@@ -424,6 +411,7 @@ section.footer {
   justify-content: center;
   /* align-items: center; */
   align-content: center;
+
 }
 
 .social-icons {
